<resources>
    <string name="app_name">SnsApp</string>

    <string name="home">홈</string>
    <string name="photo_feed">사진피드</string>

    <string name="home_popular_cards_title">인기카드 : 카드를 클릭해보세요.</string>
    <string name="home_popular_users_title">인기유저 : 유저를 클릭해보세요.</string>

    <string name="card_detail_image_description">카드 설명: %s</string>
    <string name="card_detail_user_nickname">작성자: %s</string>
    <string name="card_detail_recomend_cards_title">추천카드 : 카드를 클릭해보세요.</string>
    <string name="user_detail_user_nickname">닉네임: %s</string>
    <string name="user_introduction">소개: %s</string>

    <string name="nickname">닉네임</string>
    <string name="introduction">소개</string>
    <string name="password">비밀번호</string>
    <string name="signup">가입</string>
    <string name="signin">로그인</string>
    <string name="signout">로그아웃</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

</resources>