<?xml version="1.0" encoding="utf-8"?>
<layout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context=".signup.SignUpFragment">

    <data>
        <variable
            name="viewModel"
            type="com.jake.bucketplace.snsapp.signup.SignUpViewModel" />
        <variable
            name="fragment"
            type="com.jake.bucketplace.snsapp.signup.SignUpFragment" />
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="@dimen/margin_top"
        android:layout_marginBottom="@dimen/margin_bottom"
        android:layout_marginStart="@dimen/margin_side"
        android:layout_marginEnd="@dimen/margin_side">


        <androidx.appcompat.widget.AppCompatEditText
            android:id="@+id/signupNickName"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/nickname"
            style="@style/text_body"
            app:layout_constraintTop_toTopOf="parent"/>

        <androidx.appcompat.widget.AppCompatEditText
            android:id="@+id/signupIntroduction"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/introduction"
            android:layout_marginTop="@dimen/margin_normal"
            style="@style/text_body"
            app:layout_constraintTop_toBottomOf="@+id/signupNickName"/>

        <androidx.appcompat.widget.AppCompatEditText
            android:id="@+id/signupPassword"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/password"
            android:layout_marginTop="@dimen/margin_normal"
            style="@style/text_body"
            app:layout_constraintTop_toBottomOf="@+id/signupIntroduction"/>

        <Button
            android:id="@+id/signupButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/signup"
            android:onClick="@{() -> fragment.singUp()}"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"/>

    </androidx.constraintlayout.widget.ConstraintLayout>

</layout>